Fixed button spacing

--- a/src/App.css
+++ b/src/App.css
@@ -251,6 +251,10 @@
 	padding-top: 2.5pt;
 }
 
+.restartContainer{
+	padding-top: 10pt;
+}
+
 .bottomDesignRectangles{
 	height: 10pt;
     width: 390pt;
